Fixed height of side bar so the overflow is not covered by the footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -200,7 +200,7 @@ select {
 
 #toolContainer {
     overflow: auto;
-    height: 94%;
+    height: 93%;
 }
 
 #content {
